--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Home | Simon Woja</title>
     <meta charset="UTF-8">
     <title>Home | Simon Woja</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="CSS/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
