--- a/index.html
+++ b/index.html
@@ -167,6 +167,6 @@
         </div>
     </footer>
 
-    <script src="scripts/main.js"></script>
+    <script src="Scripts/main.js"></script>
 </body>
 </html>
