--- a/projects.html
+++ b/projects.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Project | Your Tech Identity</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects | Simon Woja</title>
-    <link rel="stylesheet" href="CSS/projects.css">
+    <link rel="stylesheet" href="css/projects.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -15,7 +12,7 @@
         <div class="container">
             <div class="logo">Bsimtech</div>
             <nav>
-                <ul>
+                <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="projects.html" class="active">Projects</a></li>
                     <li><a href="blog.html">Blog</a></li>
@@ -42,6 +39,7 @@
             </div>
             
             <div class="projects-container">
+                <!-- Project items remain the same as your original code -->
                 <!-- Project 1 -->
                 <div class="project-item" data-category="web">
                     <div class="project-image">
@@ -171,6 +169,11 @@
         </div>
     </section>
 
+    <!-- Back to Top Button -->
+    <button id="back-to-top" class="back-to-top" aria-label="Back to top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+
     <footer>
         <div class="container">
             <div class="footer-content">
@@ -203,7 +206,6 @@
         </div>
     </footer>
 
-    <script src="scripts/main.js"></script>
     <script src="scripts/projects.js"></script>
 </body>
 </html>
