--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="logo">Bsimtech</div>
             <nav>
-                <ul>
+                <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="blog.html">Blog</a></li>
@@ -170,7 +170,7 @@
                     </div>
                     
                     <div class="contact-form">
-                        <form>
+                        <form id="contactForm">
                             <div class="form-group">
                                 <input type="text" placeholder="Your Name" required>
                             </div>
@@ -190,6 +190,11 @@
             </div>
         </div>
     </section>
+
+    <!-- Back to Top Button -->
+    <button id="back-to-top" class="back-to-top" aria-label="Back to top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
 
     <footer>
         <div class="container">
@@ -224,6 +229,6 @@
     </footer>
 
     <script src="Scripts/main.js"></script>
-     <script src="Scripts/about.js"></script>
+    <script src="Scripts/about.js"></script>
 </body>
 </html>
