--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <meta charset="UTF-8">
     <title>Home | Simon Woja</title>
     <link rel="stylesheet" href="CSS/main.css">
-  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -15,9 +14,9 @@
         <div class="container">
             <div class="logo">Bsimtech</div>
             <nav>
-                <ul class="nav-links">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="projects.html" class="active">Projects</a></li>
+                <ul>
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
@@ -168,7 +167,6 @@
         </div>
     </footer>
 
-    <script src="Scripts/main.js"></script>
-    <script src="Scripts/index.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
