--- a/blog.html
+++ b/blog.html
@@ -9,15 +9,15 @@
 
 </head>
 <body>
-    <header>
+   <header>
         <div class="container">
             <div class="logo">Bsimtech</div>
             <nav>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="projects.html" class="active">Projects</a></li>
+                    <li><a href="projects.html">Projects</a></li>
                     <li><a href="blog.html">Blog</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="about.html" class="active">About</a></li>
                 </ul>
                 <div class="mobile-menu">
                     <i class="fas fa-bars"></i>
