--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
     <section class="about-page">
         <div class="container">
             <div class="about-header">
-                <h1 class="page-title">About Me</h1>
+                <h1 class="page-title">About Simon Woja</h1>
                 <p class="page-subtitle">Founder and CEO, Bsimtech Fast IT Solution</p>
             </div>
             
