--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
                 <!-- Project 1 -->
                 <div class="project-item" data-category="web">
                     <div class="project-image">
-                        <img src="images/project-webapp.jpg" alt="Web Application Project">
+                        <img src="images/computer assisted learning.jpg" alt="Web Application Project">
                         <div class="project-links">
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
                             <a href="#" class="project-link"><i class="fab fa-github"></i></a>
