--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                         <img src="images/bi.jpg" alt="Profile Picture">
                     </div>
                     <div class="bio-text">
-                        <h2>Hello, I'm Simon Woja</h2>
+                       /* <h2>Hello, I'm Simon Woja</h2>*/
                         <p>I'm a passionate technologist with over 10 years of experience building digital solutions that make an impact. My journey in tech began when I was 17.</p>
                         <p>Since then, I've had the privilege of working with companies ranging from startups to University of Juba, helping them solve complex technical challenges and deliver exceptional user experiences.</p>
                         <p>When I'm not coding, you can find me talking to people and learning and figuring answers to my curiousity, which help me maintain a balanced perspective on technology and life.</p>
