--- a/about.html
+++ b/about.html
@@ -110,10 +110,10 @@
                     <h2>Professional Journey</h2>
                     <div class="timeline">
                         <div class="timeline-item">
-                            <div class="timeline-date">2014 - Present</div>
+                            <div class="timeline-date">2025 - Present</div>
                             <div class="timeline-content">
                                 <h3>Ass. Director of ICT | Tech University of Juba</h3>
-                                <p>In-charge of the overall function of the systems and Computer labs</p>
+                                <p> In charge of the overall function of the systems and Computer labs</p>
                             </div>
                         </div>
                         <div class="timeline-item">
