--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                     <div class="project-details">
-                        <h3>Modern Web Dashboard</h3>
+                        <h3>Computer Assisted Learning System</h3>
                         <p>A responsive admin dashboard built with React, TypeScript, and Tailwind CSS featuring real-time analytics and customizable components.</p>
                         <div class="project-tech">
                             <span>React</span>
