--- a/projects.html
+++ b/projects.html
@@ -65,15 +65,15 @@
                 <!-- Project 2 -->
                 <div class="project-item" data-category="mobile">
                     <div class="project-image">
-                        <img src="images/project-mobileapp.jpg" alt="Mobile App Project">
+                        <img src="images/uoj.jpg" alt="Mobile App Project">
                         <div class="project-links">
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
                             <a href="#" class="project-link"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                     <div class="project-details">
-                        <h3>Fitness Tracker App</h3>
-                        <p>Cross-platform mobile application for tracking workouts and nutrition with social features and progress analytics.</p>
+                        <h3>inter-university council of East Africa</h3>
+                        <p>Enhancement of Network Infrastructure within South Sudan.</p>
                         <div class="project-tech">
                             <span>Flutter</span>
                             <span>Firebase</span>
