--- a/projects.html
+++ b/projects.html
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                     <div class="project-details">
-                        <h3>Computer Assisted Learning System for University of Juba</h3>
+                        <h3>Computer Assisted Learning System for the University of Juba</h3>
                         <p>A responsive admin dashboard built with React, TypeScript, and Tailwind CSS featuring real-time analytics and customizable components.</p>
                         <div class="project-tech">
                             <span>React</span>
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="project-details">
-                        <h3>inter-university council of East Africa</h3>
+                        <h3>Inter-university council of East Africa</h3>
                         <p>Enhancement of Network Infrastructure within South Sudan.</p>
                         <div class="project-tech">
                             <span>Flutter</span>
