--- a/projects.html
+++ b/projects.html
@@ -86,15 +86,15 @@
                 <!-- Project 3 -->
                 <div class="project-item" data-category="ai">
                     <div class="project-image">
-                        <img src="images/project-ai.jpg" alt="AI Project">
+                        <img src="images/digital literacy.jpg" alt="AI Project">
                         <div class="project-links">
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
                             <a href="#" class="project-link"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                     <div class="project-details">
-                        <h3>Image Recognition API</h3>
-                        <p>Machine learning service that classifies images with 95% accuracy using TensorFlow and served via a REST API.</p>
+                        <h3>Training & Capacity Building</h3>
+                        <p>Certified courses ranging from basic computer to cloud computing, cybersecurity, and AI</p>
                         <div class="project-tech">
                             <span>Python</span>
                             <span>TensorFlow</span>
