--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,9 @@
                     </div>
                     <div class="project-details">
                         <h3>Computer Assisted Learning System for the University of Juba</h3>
-                        <p>A responsive admin dashboard built with React, TypeScript, and Tailwind CSS featuring real-time analytics and customizable components.</p>
+                        <p> The system was developed to be used by the 
+                            University of Juba as a tool that particularly ensures continued engagement 
+                            between students and lecturers outside lecture halls or remotely.</p>
                         <div class="project-tech">
                             <span>React</span>
                             <span>TypeScript</span>
