--- a/about.html
+++ b/about.html
@@ -110,31 +110,32 @@
                     <h2>Professional Journey</h2>
                     <div class="timeline">
                         <div class="timeline-item">
-                            <div class="timeline-date">2025 - Present</div>
+                            <div class="timeline-date">2022 - Present</div>
                             <div class="timeline-content">
-                                <h3>Ass. Director of ICT | Tech University of Juba</h3>
+                                <h3>Ass. Director of ICT | University of Juba</h3>
                                 <p> In charge of the overall function of the systems and Computer labs</p>
                             </div>
                         </div>
                         <div class="timeline-item">
-                            <div class="timeline-date">2014 - 2025</div>
+                            <div class="timeline-date">2019 - 2021</div>
                             <div class="timeline-content">
-                                <h3>Full Stack Developer | Startup Inc</h3>
+                                <h3>System Admin | EHCC</h3>
                                 <p>Built and maintained the company's flagship product from MVP to production. Implemented features across the entire stack.</p>
                             </div>
                         </div>
                         <div class="timeline-item">
-                            <div class="timeline-date">2016 - 2018</div>
+                            <div class="timeline-date">2016 - 2022</div>
                             <div class="timeline-content">
-                                <h3>Junior Developer | Digital Agency</h3>
-                                <p>Developed websites and web applications for clients across various industries. Gained experience with multiple tech stacks.</p>
+                                <h3>Computer Science Degree | University</h3>
+                                <p>Specialized in software engineering and human-computer interaction. Completed thesis on [interesting topic]
+                                  .</p>
                             </div>
                         </div>
                         <div class="timeline-item">
                             <div class="timeline-date">2012 - 2016</div>
                             <div class="timeline-content">
-                                <h3>Computer Science Degree | University</h3>
-                                <p>Specialized in software engineering and human-computer interaction. Completed thesis on [interesting topic].</p>
+                                <h3>Junior Develop | Digital Company</h3>
+                                <p>  Developed websites and web applications for clients across various industries. Gained experience with multiple tech stacks.</p>
                             </div>
                         </div>
                     </div>
