--- a/projects.html
+++ b/projects.html
@@ -109,7 +109,7 @@
                 <!-- Project 4 -->
                 <div class="project-item" data-category="opensource">
                     <div class="project-image">
-                        <img src="images/project-opensource.jpg" alt="Open Source Project">
+                        <img src="images/ehcc1.jpg" alt="Open Source Project">
                         <div class="project-links">
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
                             <a href="#" class="project-link"><i class="fab fa-github"></i></a>
