--- a/projects.html
+++ b/projects.html
@@ -116,8 +116,15 @@
                         </div>
                     </div>
                     <div class="project-details">
-                        <h3>Dev Tools Library</h3>
-                        <p>Open source JavaScript utility library for common development tasks with 1000+ weekly downloads on npm.</p>
+                        <h3>Advance Excel Class</h3>
+                        <p>With this training, you can create the following:
+A Sales Dashboard – an interactive report with pivot tables, slicers, and dynamic charts.
+A Financial Model – a forecasting tool with scenario analysis using Data Tables.
+An Inventory Manager – a stock tracker with conditional formatting alerts for low stock.
+A VBA Report Generator – a macro that automates report creation and email distribution.
+A Gantt Chart Planner – a dynamic project timeline with conditional formatting.
+A Sports Stats Tracker – a live data import and performance dashboard.
+A Data Cleaning Tool – a macro-powered toolkit for fixing duplicates and formatting errors.</p>
                         <div class="project-tech">
                             <span>JavaScript</span>
                             <span>Jest</span>
