--- a/projects.html
+++ b/projects.html
@@ -137,15 +137,21 @@ A Data Cleaning Tool – a macro-powered toolkit for fixing duplicates and forma
                 <!-- Project 5 -->
                 <div class="project-item" data-category="web">
                     <div class="project-image">
-                        <img src="images/project-ecommerce.jpg" alt="E-commerce Project">
+                        <img src="images/ehcc4.jpg" alt="E-commerce Project">
                         <div class="project-links">
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
                             <a href="#" class="project-link"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                     <div class="project-details">
-                        <h3>E-commerce Platform</h3>
-                        <p>Full-featured online store with payment integration, inventory management, and admin dashboard.</p>
+                        <h3>Graphics at the Center</h3>
+                        <p>Master professional design skills with hands-on training in:
+Digital Illustration (Vector & Raster Techniques)
+Photo Manipulation (Advanced Photoshop Editing)
+Brand Identity Design (Logos + Visual Systems)
+Layout & Typography (Print/Digital Publications)
+Motion Graphics Basics (Animated Design Elements)
+</p>
                         <div class="project-tech">
                             <span>Vue.js</span>
                             <span>Laravel</span>
@@ -158,15 +164,15 @@ A Data Cleaning Tool – a macro-powered toolkit for fixing duplicates and forma
                 <!-- Project 6 -->
                 <div class="project-item" data-category="mobile">
                     <div class="project-image">
-                        <img src="images/project-game.jpg" alt="Mobile Game Project">
+                        <img src="images/ehccc3.jpg" alt="Mobile Game Project">
                         <div class="project-links">
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
                             <a href="#" class="project-link"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                     <div class="project-details">
-                        <h3>Puzzle Game App</h3>
-                        <p>Addictive mobile puzzle game with 50+ levels, in-app purchases, and leaderboards.</p>
+                        <h3>Training & Capacity Building</h3>
+                        <p>Certified courses ranging from basic computer to cloud computing, cybersecurity, and AI</p>
                         <div class="project-tech">
                             <span>Unity</span>
                             <span>C#</span>
