--- a/projects.html
+++ b/projects.html
@@ -33,10 +33,10 @@
             
             <div class="project-filters">
                 <button class="filter-btn active" data-filter="all">All</button>
-                <button class="filter-btn" data-filter="web">Web Development</button>
-                <button class="filter-btn" data-filter="mobile">Mobile Apps</button>
-                <button class="filter-btn" data-filter="ai">AI/ML</button>
-                <button class="filter-btn" data-filter="opensource">Open Source</button>
+                <button class="filter-btn" data-filter="web">Network Managment</button>
+                <button class="filter-btn" data-filter="mobile">Web Development</button>
+                <button class="filter-btn" data-filter="ai">AI</button>
+                <button class="filter-btn" data-filter="opensource">Computer Training</button>
             </div>
             
             <div class="projects-container">
