--- a/index.html
+++ b/index.html
@@ -78,18 +78,18 @@
             <h2 class="section-title">Featured Projects</h2>
             <div class="projects-grid">
                 <div class="project-card">
-                    <img src="images/project1.jpg" alt="Project 1">
+                    <img src="images/starlink1.jpg" alt="Project 1">
                     <div class="project-info">
-                        <h3>Project Name 1</h3>
-                        <p>Brief description of the project and technologies used.</p>
+                        <h3>Professional Starlink Installation</h3>
+                        <p>I provide end-to-end assistance to make your satellite internet setup seamless and hassle-free.</p>
                         <a href="#" class="btn small">View Details</a>
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="images/project2.jpg" alt="Project 2">
+                    <img src="images/starlink2.jpg" alt="Project 2">
                     <div class="project-info">
-                        <h3>Project Name 2</h3>
-                        <p>Brief description of the project and technologies used.</p>
+                        <h3>Support Services</h3>
+                        <p>Whether you're in a remote area, on the move with Starlink Roam, or need high-performance Business Starlink, I’ve got you covered.</p>
                         <a href="#" class="btn small">View Details</a>
                     </div>
                 </div>
