--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     <h3>Connect</h3>
                     <div class="social-icons">
                         <a href="#"><i class="fab fa-github"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="https://x.com/simon_waja"><i class="fab fa-twitter"></i></a>
                         <a href="#"><i class="fab fa-linkedin"></i></a>
                         <a href="#"><i class="fab fa-dev"></i></a>
                     </div>
