--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     <div class="social-icons">
                         <a href="#"><i class="fab fa-github"></i></a>
                         <a href="https://x.com/simon_waja"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/in/simon-woja-182b95101"><i class="fab fa-linkedin"></i></a>
                         <a href="#"><i class="fab fa-dev"></i></a>
                     </div>
                 </div>
