--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         <a href="#"><i class="fab fa-github"></i></a>
                         <a href="https://x.com/simon_waja"><i class="fab fa-twitter"></i></a>
                         <a href="https://www.linkedin.com/in/simon-woja-182b95101"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-dev"></i></a>
+                        <a href="#"><i class="fab fa-facebook"></i></a>
                     </div>
                 </div>
             </div>
