--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
                 <div class="footer-social">
                     <h3>Connect</h3>
                     <div class="social-icons">
-                        <a href="#"><i class="fab fa-github"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
                         <a href="https://x.com/simon_waja"><i class="fab fa-twitter"></i></a>
                         <a href="https://www.linkedin.com/in/simon-woja-182b95101"><i class="fab fa-linkedin"></i></a>
-                        <a href="#"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/simon.waja"><i class="fab fa-facebook"></i></a>
                     </div>
                 </div>
             </div>
