--- a/blog.html
+++ b/blog.html
@@ -206,6 +206,11 @@ Suggestions included installing a RADIUS server and discussing its importance.</
         </div>
     </section>
 
+     <!-- Back to Top Button -->
+    <button id="back-to-top" class="back-to-top" aria-label="Back to top">
+        <i class="fas fa-arrow-up"></i>
+    </button>
+
     <footer>
         <div class="container">
             <div class="footer-content">
