--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
                 
                 <div class="about-contact">
                     <div class="contact-info">
-                        <h2>Get In Touch Me</h2>
+                        <h2>Get In Touch With Me</h2>
                         <p>I am always open to discussing new projects, creative ideas or opportunities to be part of your vision.</p>
                         
                         <div class="contact-methods">
