--- a/projects.html
+++ b/projects.html
@@ -56,10 +56,10 @@
                             University of Juba as a tool that particularly ensures continued engagement 
                             between students and lecturers outside lecture halls or remotely.</p>
                         <div class="project-tech">
-                            <span>React</span>
+                            <span>PHP</span>
                             <span>TypeScript</span>
-                            <span>Node.js</span>
-                            <span>MongoDB</span>
+                            <span>Sql</span>
+                            <span>Python</span>
                         </div>
                     </div>
                 </div>
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                     <div class="project-details">
-                        <h3>Advance Excel Class</h3>
+                        <h3>Advance Excel</h3>
                         <p>With this training, you can create the following:
 A Sales Dashboard – an interactive report with pivot tables, slicers, and dynamic charts.
 A Financial Model – a forecasting tool with scenario analysis using Data Tables.
