--- a/index.html
+++ b/index.html
@@ -187,6 +187,6 @@
         </div>
     </footer>
 
-    <script src="Scripts/main.js"></script>
+    <script src="Scripts/index.js"></script>
 </body>
 </html>
