--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="about-header">
                 <h1 class="page-title">About Simon Woja</h1>
-                <p class="page-subtitle">Founder and CEO, Bsimtech Fast IT Solution</p>
+                <p class="page-subtitle"><a href="https://bsimtech.github.io/about"></a>Founder and CEO, Bsimtech Fast IT Solution</p></a>
             </div>
             
             <div class="about-content">
