--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <div class="container">
             <div class="about-header">
                 <h1 class="page-title">About Simon Woja</h1>
-                <p class="page-subtitle">Founder and CEO, <a href="https://bsimtech.github.io/about">Bsimtech Fast IT Solution</a></p>
+                <p class="page-subtitle">Founder and CEO, href="https://bsimtech.github.io/about" Bsimtech Fast IT Solution</p>
             </div>
             
             <div class="about-content">
