Update project details in projects.html
The projects.html file has been updated with new project details, including descriptions, technologies used, and images for each project. The structure and styling links remain unchanged.

--- a/projects.html
+++ b/projects.html
@@ -116,20 +116,17 @@
                         </div>
                     </div>
                     <div class="project-details">
-                        <h3>Advance Excel</h3>
-                        <p>With this training, you can create the following:
-A Sales Dashboard – an interactive report with pivot tables, slicers, and dynamic charts.
-A Financial Model – a forecasting tool with scenario analysis using Data Tables.
-An Inventory Manager – a stock tracker with conditional formatting alerts for low stock.
-A VBA Report Generator – a macro that automates report creation and email distribution.
-A Gantt Chart Planner – a dynamic project timeline with conditional formatting.
-A Sports Stats Tracker – a live data import and performance dashboard.
-A Data Cleaning Tool – a macro-powered toolkit for fixing duplicates and formatting errors.</p>
+                        <h3>Development and Deployment of a Diabetes Prediction Web Application Using Flask</h3>
+                        <p>This project successfully developed and deployed a machine learning-based web application for diabetes prediction using the Flask framework. 
+                            The system utilizes a Random Forest classifier trained on the Pima Indians Diabetes Dataset to provide real-time risk assessments. 
+                            The application achieved 77% accuracy with a modular, 
+                            scalable architecture that demonstrates the complete lifecycle of an AI-powered web application from data collection to deployment.</p>
                         <div class="project-tech">
-                            <span>JavaScript</span>
-                            <span>Jest</span>
-                            <span>Webpack</span>
-                            <span>ES6</span>
+                            <span>Jupyter Notebook</span>
+                            <span>Flask</span>
+                            <span>HTML5</span>
+                            <span>CSS</span>
+                            <span>Javascript</span>
                         </div>
                     </div>
                 </div>
@@ -225,3 +222,4 @@ Motion Graphics Basics (Animated Design Elements)
     <script src="Scripts/projects.js"></script>
 </body>
 </html>
+
