--- a/projects.html
+++ b/projects.html
@@ -109,7 +109,7 @@
                 <!-- Project 4 -->
                 <div class="project-item" data-category="opensource">
                     <div class="project-image">
-                        <img src="images/ehcc1.jpg" alt="Open Source Project">
+                        <img src="images/results.png" alt="Open Source Project">
                         <div class="project-links">
                             <a href="#" class="project-link"><i class="fas fa-external-link-alt"></i></a>
                             <a href="#" class="project-link"><i class="fab fa-github"></i></a>
@@ -222,4 +222,5 @@ Motion Graphics Basics (Animated Design Elements)
     <script src="Scripts/projects.js"></script>
 </body>
 </html>
+
 
